# OC_credit-scoring-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
notebooks/: P6_Analyse_Exploiratoire.ipynb  P6_Feature_Engineering.ipynb  P6_Modelisation.ipynb
src/: data_processing.py  main.py
src/tests/: test_api.py
