[project]
name = "credit-scoring-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Cyrille Elie",email = "cyrille.elie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<2.3)",
    "pandas (>=2.2.0,<2.3.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "mlflow (>=2.22.1,<3.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "optuna-integration (>=4.3.0,<5.0.0)",
    "ipywidgets (>=8.0.0,<9.0.0)",
    "shap (>=0.47.2,<0.48.0)",
    "fastapi[all] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

